--- a/index.html
+++ b/index.html
@@ -1,37 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel=stylesheet href=”style.css”>
+	<link rel="stylesheet" href="style.css">
     <title>FLASHCARD</title>
 </head>
 <body>
-    <main>
-        <section id=”containeir””>
-        <article class=”cartao”>
-        <div class=”cartao_conteudo”>
-    <h1>PROGRAMAÇÃO</h1>
-    <div class=”cartao_pergunta”>
-        O que é JavaScript?
-    </div>
-    <div class=”cartao_pergunta”>
+	<main>
+	<section id="container">
+	<article class="cartao">
+	<div class="cartao_conteudo">
+	<h3>PROGRAMAÇÃO’</h3>
+<div class="cartao_pergunta">
+O que é JavaScript?
+</div>
+<div class="cartao_resposta">
 O JavaScript é uma linguagem de programação
 </div>
-</article>
-<article class=”cartao”>
-<div class=”cartao_pergunta”>
-Programação
 </div>
-<div class=”cartao_resposta”>
+</article>
+<article class="cartao">
+<div class="cartao_conteudo">
+<h3>PROGRAMAÇÃO</h3>
+<div class="cartao_pergunta">
+O QUE É CSS?
+</div>
+<div class="cartao_resposta">
 O CSS é uma linguagem de estilização
-    </div>
-   </div>
-  </article>
-  <footer>
-    <p>Projeto desenvolvido por JULIA CARDOSO</p>
-    </footer>
-    </section>
-    </main>
-    </body>
-    </html>
+</div>
+</div>
+</article>
+<article class="cartao">
+<div class="cartao_conteudo">
+<h3>PROGRAMAÇÃO</h3>
+<div class="cartao_pergunta">
+<h3>O QUE É CSS?</h3>
+</div>
+<div class="cartao_resposta">
+O CSS é uma linguagem de estilização
+</div>
+</div>
+</article>
+<footer>
+<p>Projeto desenvolvido por Julia Cardoso</p>
+</footer>
+</section>
+</main>
+</body>
+</html>
+
